<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="vm"
            type="com.gpaddy.baseandroid.viewmodel.HomeViewModel" />

        <variable
            name="click"
            type="com.gpaddy.baseandroid.ui.fragment.HomeFragment.ClickProxy" />

    </data>
<!--    <androidx.core.widget.NestedScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:scrollbars="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_marginTop="@dimen/keyline_5"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:src="@drawable/app"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_2"
        android:maxLines="2"
        android:text="@string/note_favorite"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/keyline_4"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/keyline_4"
        app:cardCornerRadius="@dimen/keyline_4"
        app:layout_constraintEnd_toStartOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" >
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@drawable/mu"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/doi_song"
                android:textColor="@color/white_50"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@id/cardView2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/keyline_4"
        android:layout_marginEnd="@dimen/keyline_4"
        app:cardCornerRadius="@dimen/keyline_4"
        app:layout_constraintBottom_toBottomOf="@+id/cardView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView1"
        app:layout_constraintTop_toTopOf="@+id/cardView1" >
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@drawable/kinhte"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/kinh_te"
                android:textColor="@color/white_50"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/keyline_4"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/keyline_4"
        app:cardCornerRadius="@dimen/keyline_4"
        app:layout_constraintEnd_toStartOf="@+id/cardView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1" >
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@drawable/sk"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/suc_khoe"
                android:textColor="@color/white_50"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@id/cardView4"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/keyline_4"
        android:layout_marginEnd="@dimen/keyline_4"
        app:cardCornerRadius="@dimen/keyline_4"
        app:layout_constraintBottom_toBottomOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="@+id/cardView3" >
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@drawable/xa_hoi"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/xa_hoi"
                android:textColor="@color/white_50"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/keyline_4"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/keyline_4"
        app:cardCornerRadius="@dimen/keyline_4"
        app:layout_constraintEnd_toStartOf="@+id/cardView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" >
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@drawable/ts"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/giai_tri"
                android:textColor="@color/white_50"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@id/cardView6"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/keyline_4"
        android:layout_marginEnd="@dimen/keyline_4"
        app:cardCornerRadius="@dimen/keyline_4"
        app:layout_constraintBottom_toBottomOf="@+id/cardView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView5"
        app:layout_constraintTop_toTopOf="@+id/cardView5" >
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@drawable/cong_nghe"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cong_nghe"
                android:textColor="@color/white_50"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/keyline_4"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/keyline_4"
        app:cardCornerRadius="@dimen/keyline_4"
        app:layout_constraintEnd_toStartOf="@+id/cardView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView5" >
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@drawable/thethao"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/the_thao"
                android:textColor="@color/white_50"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@id/cardView8"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/keyline_4"
        android:layout_marginEnd="@dimen/keyline_4"
        app:cardCornerRadius="@dimen/keyline_4"
        app:layout_constraintBottom_toBottomOf="@+id/cardView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView7"
        app:layout_constraintTop_toTopOf="@+id/cardView7" >
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@drawable/ts"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tam_su"
                android:textColor="@color/white_50"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tiếp tục"
        style="?attr/materialButtonStyle"
        app:shapeAppearance="@style/buttonShare"
        android:layout_marginStart="@dimen/keyline_4"
        android:layout_marginEnd="@dimen/keyline_4"
        app:layout_constraintVertical_bias="0.98"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
<!--    </androidx.core.widget.NestedScrollView>-->
</layout>