<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="vm"
            type="com.gpaddy.baseandroid.viewmodel.NetworkViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".ui.activity.MainActivity">
      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="80dp"
          app:cardCornerRadius="@dimen/keyline_2"
          android:layout_margin="@dimen/keyline_2"
          android:id="@+id/btn_movie"
          >

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:weightSum="5"
              >
              <TextView
                  android:layout_weight="4"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/digimovie"
                  android:layout_gravity="center_vertical"
                  android:paddingStart="@dimen/keyline_4"
                  android:textAppearance="?attr/textAppearanceHeadline6"
                  />
              <ImageView
                  android:layout_weight="1"
                  android:layout_width="48dp"
                  android:layout_height="48dp"
                  android:layout_gravity="center_vertical"
                  android:src="@drawable/app_movie"
                  />
          </LinearLayout>
      </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardCornerRadius="@dimen/keyline_2"
            android:layout_margin="@dimen/keyline_2"
            android:id="@+id/btn_clip"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="5"
                >
                <TextView
                    android:layout_weight="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digiclip"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="@dimen/keyline_4"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <ImageView
                    android:layout_weight="1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/app_clip"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardCornerRadius="@dimen/keyline_2"
            android:layout_margin="@dimen/keyline_2"
            android:id="@+id/btn_music"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="5"
                >
                <TextView
                    android:layout_weight="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digimusic"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="@dimen/keyline_4"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <ImageView
                    android:layout_weight="1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/app_movie"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardCornerRadius="@dimen/keyline_2"
            android:layout_margin="@dimen/keyline_2"
            android:id="@+id/btn_health"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="5"
                >
                <TextView
                    android:layout_weight="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digihealth"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="@dimen/keyline_4"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <ImageView
                    android:layout_weight="1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/app_health"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardCornerRadius="@dimen/keyline_2"
            android:layout_margin="@dimen/keyline_2"
            android:id="@+id/btn_mytv"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="5"
                >
                <TextView
                    android:layout_weight="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mytv"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="@dimen/keyline_4"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <ImageView
                    android:layout_weight="1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/mytv"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>


